crates/agent-tui/tests/snapshots/render_snapshots__runtime_interrupted_jobs_notice.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"runtime_interrupted_jobs_notice\", &s, W, H)"
---
› Explique la boucle d'agent et montre le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.

  · 2 background jobs interrupted by the restart:
    job_5b1e07d4c2a9f38610be4d27a95c0f3e (npm run dev): interrupted: the process
    restarted while the background job was running
    job_9f2c4a17b3d84e0192cf5a7b6d3e8140 (cargo watch -x test): interrupted: the
    process restarted while the background job was running








────────────────────────────────────────────────────────────────────────────────
› Ask Pyxis to do anything
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
