crates/agent-tui/tests/snapshots/render_snapshots__streaming_deltas.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"streaming_deltas\", &s, W, H)"
---
› Résume l'architecture

● Le cœur est headless : aucun ANSI n'en sort.















• Working (4s • esc to interrupt)

────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
