crates/agent-tui/tests/snapshots/render_snapshots__welcome.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"welcome\", &s, W, H)"
---

    ╭──────────────────────────────────────────────────────────────────────╮
    │                                                                      │
    │                         PYXIS                                        │
    │                         your terminal coding agent                   │
    │   ⢄⢵⣴⢵⢤⢄⣄   ⢀⢀⠴⠕⠷⢿⢅⠁                                                 │
    │   ⠑⢿⠅⠁ ⠁⠁⠉⠵⠷⢍⠁  ⢀⠝⠅     ◆ gpt-5  ·  pyxis  ·  Ask for approval       │
    │    ⠉⠵⢅ ⢠ ⢕⢵⢕⠅⠙⢵⢴⠏⠁      ○ not connected  restart pyxis to reconnect  │
    │      ⢽⠟⠅ ⠙⠝⠟⢅⠕⠍⠁⠑⢅⠄                                                  │
    │    ⢀⣽⠁   ⢁⠤⢟⣅    ⢙⣷⠅    /help  ·  /models  ·  /effort                │
    │    ⠝⢷⠵⠴⠗⠉⠁  ⠁⠉⠙⠓⠗⠟⠝⠁    /permissions  ·  /goal                       │
    │    ⠁ ⠁                  ? for shortcuts   ·   ↑ history              │
    │                                                                      │
    │                                                                      │
    ╰──────────────────────────────────────────────────────────────────────╯





────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
