crates/agent-tui/tests/snapshots/render_snapshots__welcome_wide.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"welcome_wide\", &s, WIDE, H)"
---

                                                                ╭──────────────────────────────────────────────────────────────────────╮
                                                                │                                                                      │
                                                                │                         PYXIS                                        │
                                                                │                         your terminal coding agent                   │
                                                                │   ⢄⢵⣴⢵⢤⢄⣄   ⢀⢀⠴⠕⠷⢿⢅⠁                                                 │
                                                                │   ⠑⢿⠅⠁ ⠁⠁⠉⠵⠷⢍⠁  ⢀⠝⠅     ◆ gpt-5  ·  pyxis  ·  Ask for approval       │
                                                                │    ⠉⠵⢅ ⢠ ⢕⢵⢕⠅⠙⢵⢴⠏⠁      ○ not connected  restart pyxis to reconnect  │
                                                                │      ⢽⠟⠅ ⠙⠝⠟⢅⠕⠍⠁⠑⢅⠄                                                  │
                                                                │    ⢀⣽⠁   ⢁⠤⢟⣅    ⢙⣷⠅    /help  ·  /models  ·  /effort                │
                                                                │    ⠝⢷⠵⠴⠗⠉⠁  ⠁⠉⠙⠓⠗⠟⠝⠁    /permissions  ·  /goal                       │
                                                                │    ⠁ ⠁                  ? for shortcuts   ·   ↑ history              │
                                                                │                                                                      │
                                                                │                                                                      │
                                                                ╰──────────────────────────────────────────────────────────────────────╯





────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
